# mc-dev-tool

./: Cargo.toml
src/: main.rs  utils.rs
src/app/: main.rs
src/app/command/: basic.rs  help.rs  mod.rs
src/mcdev/: lib.rs  mcapi.rs  meta.rs  version.rs
