[package]
name = "mc-mapping-helper"
version = "0.1.0"
authors = ["mindstorm38 <theorozier38@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
isahc = { version = "0.8.2", features = ["json"] }
ansi_term = "0.12"

[lib]
name = "mcdev"
path = "src/mcdev/lib.rs"